Lucene contrib change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 3.6.0 ================

New Features

* LUCENE-3596: DirectoryTaxonomyWriter extensions can override createIndexWriterConfig() 
  and modify how its internal index writer is opened. (Doron Cohen)

API Changes

* LUCENE-3596: DirectoryTaxonomyWriter.openIndexWriter() now takes an 
  openIndexWriter parameter rather than just an open-mode. (Doron Cohen) 
  
* LUCENE-3606: FieldNormModifier was deprecated, because IndexReader's
  setNorm() was deprecated. Furthermore, this class is broken, as it does
  not take position overlaps into account while recalculating norms.
  (Uwe Schindler, Robert Muir)

Bug Fixes

 * LUCENE-3600: BlockJoinQuery now supports parent docs that have no
   children (such docs will never match, but BJQ was tripping an
   assert if such a parent doc was the first doc in the segment).
   (Shay Banon, Mike McCandless)

 * LUCENE-3609: Fix regression in BooleanFilter, introduced in Lucene 3.5,
   to correctly handle minShouldMatch behaviour of previous versions.
   (Shay Banon, Uwe Schindler)
 
Documentation

 * LUCENE-3599: Javadocs for DistanceUtils.haversine() were incorrectly 
   stating the expected order of the arguments (David Smiley via hossman)

======================= Lucene 3.5.0 ================

Changes in backwards compatibility policy

 * LUCENE-3446: Removed BooleanFilter.finalResult() due to change to
   FixedBitSet.  (Uwe Schindler)

 * LUCENE-3508: Changed some method signatures in decompounding TokenFilters
   to make them no longer use the Token class.  (Uwe Schindler)
   
 * LUCENE-3557: The various SpellChecker.indexDictionary methods were removed,
   and consolidated to one:

   indexDictionary(Dictionary dict, IndexWriterConfig config, boolean optimize)
   
   Previously, there was no way to specify an IndexWriterConfig, and some